Ticket #28568: Fixed translation.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -2982,7 +2982,7 @@ com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.onclick = Skript, 
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.ondblclick = Skript, das den Toggle-Klick verhindert, wenn die Kopfzeile einen Doppelklick erhält.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.title = Titel der Gruppe.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.toggleButton = Die Schaltfläche zum auf- und zuklappen der Gruppe.
-com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.visible = Sichtbarkeit
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.visible = Ob die Gruppe derzeit sichtbar ist.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.collapsible = Ob die Gruppe zugeklappt werden kann.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.columns = Die maximale Anzahl der Spalten der Gruppenzelle.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.cssClass = Zusätzliche CSS Klasse für die Gruppe.
