--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -2982,7 +2982,7 @@ com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.onclick = Script t
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.ondblclick = Script that prevents the toggle click, if the header receives a double click.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.title = Title of the group.
 com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.toggleButton = The button for toggling the collapsed state of the group.
-com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.visible = Visibility
+com.top_logic.layout.form.boxes.reactive_tag.GroupCellControl.visible = Whether the group is currently visible.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.collapsible = Whether the group should never be collapsed.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.columns = The maximum number of columns of the group cell.
 com.top_logic.layout.form.boxes.reactive_tag.GroupSettings.cssClass = The custom CSS class to add to the generated group cell.
