Ticket #28630: Added button to clear color selection.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -70,6 +70,7 @@ class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE.tooltip = Set
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_ALL = Alle auswählen
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_DISPLAY__CNT_TOTAL = {0} / {1}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_NONE = Auswahl löschen
+class.com.top_logic.layout.form.control.I18NConstants.CLEAR_COLOR_SELECTION = Farbauswahl zurücksetzen
 class.com.top_logic.layout.form.control.I18NConstants.DD_ITEM_SELECTED = Das Element aus der Dropdown-Liste wird ausgewählt.
 class.com.top_logic.layout.form.control.I18NConstants.DD_ITEM_SELECTED.help = Befehl zum Speichern des ausgewählten Elements aus einer Dropdown-Liste.
 class.com.top_logic.layout.form.control.I18NConstants.EMPTY_SINGLE_SELECTION_WITH_NO_OPTIONS_MEGA_MENU = Keine Auswahl verfügbar
