--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -70,6 +70,7 @@ class.com.top_logic.layout.form.component.I18NConstants.INVALIDATE.tooltip = Res
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_ALL = Select all
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_DISPLAY__CNT_TOTAL = {0} / {1}
 class.com.top_logic.layout.form.control.I18NConstants.CHECKLIST_NONE = Clear selection
+class.com.top_logic.layout.form.control.I18NConstants.CLEAR_COLOR_SELECTION = Reset color selection
 class.com.top_logic.layout.form.control.I18NConstants.DD_ITEM_SELECTED = Element from dropdown list is selected.
 class.com.top_logic.layout.form.control.I18NConstants.DD_ITEM_SELECTED.help = Command to save selected item from a dropdown.
 class.com.top_logic.layout.form.control.I18NConstants.EMPTY_SINGLE_SELECTION_WITH_NO_OPTIONS_MEGA_MENU = No selection available
