Ticket #28727: Added context menu entries for select/deselect sub-tree.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -137,6 +137,12 @@ class.com.top_logic.layout.table.export.I18NConstants.PERFORMING_EXPORT = Export
 class.com.top_logic.layout.table.export.I18NConstants.PREPARING_DOWNLOAD = Download vorbereiten.
 class.com.top_logic.layout.table.export.I18NConstants.STARTING_EXPORT = Export starten.
 class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = Es gibt keine Spalte mit dem Identifier {0}. Es ist wichtig, dass die inneren Spalten in einer vorherigen Spaltenkonfiguration definiert werden, bevor sie in einer Spaltengruppenkonfiguration verwendet werden.
+class.com.top_logic.layout.table.tree.I18NConstants.DESELECT_SUBTREE = Löscht die Auswahl des Teilbaums
+class.com.top_logic.layout.table.tree.I18NConstants.DESELECT_SUBTREE.tooltip = Entfernt alle Knoten des Teilbaums aus der aktuellen Auswahl.
+class.com.top_logic.layout.table.tree.I18NConstants.NO_EXEC_FULL = Der ausgewählte Teilbaum ist bereits vollständig ausgewählt.
+class.com.top_logic.layout.table.tree.I18NConstants.NO_EXEC_NONE = Es gibt keine ausgewählten Knoten in dem Teilbaum.
+class.com.top_logic.layout.table.tree.I18NConstants.SELECT_SUBTREE = Teilbaum auswählen
+class.com.top_logic.layout.table.tree.I18NConstants.SELECT_SUBTREE.tooltip = Wählt alle Knoten des Teilbaums aus.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME = Die Eigenschaft {1} ist nicht auf {0} definiert.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = Die Eigenschaft {1} ist auf {0} nicht definiert. Verfügbare Eigenschaften sind: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Das Öffnen des Fensters schlug fehl.
@@ -6142,6 +6148,10 @@ com.top_logic.layout.table.renderer.UniformCellRenderer.Config.renderer.tooltip 
 com.top_logic.layout.table.renderer.UniformCellRenderer.tooltip = Eine <i>Zell-Renderer-Implementierung</i>, die einheitlich denselben <i>Renderer</i> für alle Spalten in einer Zeile verwendet.
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll = Baumtabelle erweitern einklappen alle
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll.tooltip = Abstrakter Befehl, der alle Knoten in einer Baumtabelle ein- oder ausklappt.
+com.top_logic.layout.table.tree.SelectSubtree = Teilbaum auswählen
+com.top_logic.layout.table.tree.SelectSubtree.Config.select = Wählen Sie
+com.top_logic.layout.table.tree.SelectSubtree.Config.select.tooltip = Ob der Teilbaum ausgewählt oder abgewählt ist.
+com.top_logic.layout.table.tree.SelectSubtree.tooltip = <i>Befehl</i> zur Auswahl aller Knoten im Teilbaum.
 com.top_logic.layout.table.tree.TreeBuilderAdaptor = Treebuilder-Adapter
 com.top_logic.layout.table.tree.TreeBuilderAdaptor.Config.treeModelBuilder = Baummodell-Bauer
 com.top_logic.layout.table.tree.TreeBuilderAdaptor.Config.treeModelBuilder.tooltip = Der<i>Modellbauer</i> stellt einen Baum zur Verfügung.
@@ -6433,8 +6443,10 @@ com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Gibt den Auswahlfilter für das erstellte <i>Auswahlmodell</i> zurück.
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Mehrfachselektion
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Ob das erstellte <i>Selektionsmodell</i> eine Mehrfachselektion unterstützen muss.
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection = Baumauswahl
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection.tooltip = Ob das erstellte <i>Selektionsmodell</i> die Baumselektion unterstützt, d.h. wenn ein Knoten in einem Baum selektiert wird, bedeutet dies, dass alle Kinder selektiert werden.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.subtree-selection = Auswahl der Teilbäume
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.subtree-selection.tooltip = Ob die Auswahl ganze Teilbäume repräsentiert. Wenn ein Knoten ausgewählt ist, bedeutet dies, dass alle seine Kinder (implizit) ausgewählt sind.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.treeSemantics = Baum-Semantik
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.treeSemantics.tooltip = Ob ein Auswahlmodell erstellt werden soll, das erweiterte Informationen und Operationen für Baumstrukturen bietet. <p> Ein Selektionsmodell mit Baumsemantik darf nur verwendet werden, wenn das zugrunde liegende Modell ein Baummodell ist. </p> <p> Diese Option ist nur für ein Multi-Selektionsmodell relevant. </p>
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection = Mehrfache Auswahl
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection.tooltip = Ob mehrere Werte ausgewählt werden können.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.selectionFilter = Auswahlfilter
@@ -6492,6 +6504,28 @@ com.top_logic.mig.html.SelectionNaming$Name = Name
 com.top_logic.mig.html.SelectionNaming$Name.tooltip = Name der Auswahl eines <i>Auswahlmodells</i>
 com.top_logic.mig.html.SelectionNaming.Name.selection-model = Auswahl-Modell
 com.top_logic.mig.html.SelectionNaming.Name.selection-model.tooltip = Name des <i>Selektionsmodells</i>.
+com.top_logic.mig.html.TreeSelectionModel$DescendantState = Staat der Nachkommenschaft
+com.top_logic.mig.html.TreeSelectionModel$DescendantState.tooltip = Beschreibung des Selektionsstatus der Nachkommen eines Baumknotens.
+com.top_logic.mig.html.TreeSelectionModel$NodeSelectionState = Status der Knotenauswahl
+com.top_logic.mig.html.TreeSelectionModel$NodeSelectionState.tooltip = Beschreibung des Selektionsstatus eines Baumknotens.
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.ALL = Alle
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.ALL.tooltip = Alle Nachkommen des Knotens werden ausgewählt.
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.NONE = Keine
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.NONE.tooltip = Keiner der Nachkommen des Knotens wird ausgewählt.
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.SOME = Einige
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.SOME.tooltip = Es gibt Nachkommen des Knotens, die ausgewählt werden.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.ALL_DESCENDANTS = Alle Nachkommen
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.ALL_DESCENDANTS.tooltip = Der Knoten wird nicht ausgewählt, aber alle seine Nachkommen.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.FULL = Vollständig
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.FULL.tooltip = Der Knoten und alle seine Nachkommen werden ausgewählt.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.NONE = Keine
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.NONE.tooltip = Weder der Knoten noch einer seiner Nachkommen wird ausgewählt.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_NO_DESCENDANTS = Keine Nachkommen ausgewählt
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_NO_DESCENDANTS.tooltip = Der Knoten wird ausgewählt, aber keiner seiner Nachkommen.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_SOME_DESCENDANTS = Einige Nachkommen ausgewählt
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_SOME_DESCENDANTS.tooltip = Der Knoten und einige seiner Nachkommen werden ausgewählt.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SOME_DESCENDANTS = Einige Nachkommen
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SOME_DESCENDANTS.tooltip = Der Knoten ist nicht ausgewählt, aber es gibt ausgewählte Nachkommen.
 com.top_logic.mig.html.TreeSelectionModelFactory = Baumauswahl Modellfabrik
 com.top_logic.mig.html.TreeSelectionModelFactory.tooltip = <i>Standardauswahlmodellfabrik</i>, die <i>Baumknoten</i> auspackt, bevor sie die Knoten an den konfigurierten Filter weitergibt.
 com.top_logic.mig.html.TriState = Tri-State
