Ticket #28727: Added context menu entries for select/deselect sub-tree.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -137,6 +137,12 @@ class.com.top_logic.layout.table.export.I18NConstants.PERFORMING_EXPORT = Export
 class.com.top_logic.layout.table.export.I18NConstants.PREPARING_DOWNLOAD = Preparing download.
 class.com.top_logic.layout.table.export.I18NConstants.STARTING_EXPORT = Starting export.
 class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = There is no column with the identifier {0}. It is important that the inner columns are defined in a previous column configuration before it is used in a column group configuration.
+class.com.top_logic.layout.table.tree.I18NConstants.DESELECT_SUBTREE = Clears sub-tree selection
+class.com.top_logic.layout.table.tree.I18NConstants.DESELECT_SUBTREE.tooltip = Removes all all nodes in the sub-tree from the current selection.
+class.com.top_logic.layout.table.tree.I18NConstants.NO_EXEC_FULL = The selected sub-tree is already completely selected.
+class.com.top_logic.layout.table.tree.I18NConstants.NO_EXEC_NONE = There are no selected nodes in the sub-tree.
+class.com.top_logic.layout.table.tree.I18NConstants.SELECT_SUBTREE = Select subtree
+class.com.top_logic.layout.table.tree.I18NConstants.SELECT_SUBTREE.tooltip = Selects all nodes in the sub-tree.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME = The property {1} is not defined on {0}.
 class.com.top_logic.layout.template.I18NConstants.ERROR_NO_SUCH_PROPERTY__SELF_NAME_AVAILABLE = The property {1} is not defined on {0}. Available properties are: {2}
 class.com.top_logic.layout.window.I18NConstants.WINDOW_TEMPLATE_INSTANTIATION_FAILED__TEMPLATE = Opening the window failed.
@@ -6143,6 +6149,10 @@ com.top_logic.layout.table.renderer.UniformCellRenderer.Config.renderer.tooltip 
 com.top_logic.layout.table.renderer.UniformCellRenderer.tooltip = A <i>cell renderer</i> implementation that uniformly uses the same <i>renderer</i> for all columns in a row.
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll = Tree table expand collapse all
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll.tooltip = Abstract command that expands or collapses all nodes in a tree table.
+com.top_logic.layout.table.tree.SelectSubtree = Select subtree
+com.top_logic.layout.table.tree.SelectSubtree.Config.select = Select
+com.top_logic.layout.table.tree.SelectSubtree.Config.select.tooltip = Whether the subtree is selected or deselected.
+com.top_logic.layout.table.tree.SelectSubtree.tooltip = <i>Command</i> selecting all nodes in the subtree.
 com.top_logic.layout.table.tree.TreeBuilderAdaptor = Tree builder adaptor
 com.top_logic.layout.table.tree.TreeBuilderAdaptor.Config.treeModelBuilder = Tree model builder
 com.top_logic.layout.table.tree.TreeBuilderAdaptor.Config.treeModelBuilder.tooltip = <i>Model builder</i> providing a tree.
@@ -6434,8 +6444,10 @@ com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter = Filter
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.filter.tooltip = Returns the selection filter for the created <i>selection model</i>.
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple = Multiple
 com.top_logic.mig.html.DefaultSelectionModelFactory.Config.multiple.tooltip = Whether the created <i>selection model</i> must support multiple selection.
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection = Tree selection
-com.top_logic.mig.html.DefaultSelectionModelFactory.Config.tree-selection.tooltip = Whether the created <i>selection model</i> supports tree selection, i.e. when a node in a tree is selected, that means that all children are selected.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.subtree-selection = Subtree selection
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.subtree-selection.tooltip = Whether the selection represents whole subtrees. When a node is selected, that means that all of its children are (implicitly) selected.
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.treeSemantics = Tree semantics
+com.top_logic.mig.html.DefaultSelectionModelFactory.Config.treeSemantics.tooltip = Whether to create a selection model that provides enhanced information and operations for tree structures. <p> A selection model with tree semantics must only be used, if the underlying model is a tree model. </p> <p> This option is only relevant, for a multi-selection model. </p>
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection = Multiple selection
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.multiSelection.tooltip = Whether multiple value can be selected.
 com.top_logic.mig.html.DefaultSelectionModelFactory.UIOptions.selectionFilter = Selection filter
@@ -6493,6 +6505,28 @@ com.top_logic.mig.html.SelectionNaming$Name = Name
 com.top_logic.mig.html.SelectionNaming$Name.tooltip = Name of the selection of a <i>selection model</i>
 com.top_logic.mig.html.SelectionNaming.Name.selection-model = Selection model
 com.top_logic.mig.html.SelectionNaming.Name.selection-model.tooltip = Name of the <i>selection model</i>.
+com.top_logic.mig.html.TreeSelectionModel$DescendantState = Descendant state
+com.top_logic.mig.html.TreeSelectionModel$DescendantState.tooltip = Description of the selection state of the descendants of a tree node.
+com.top_logic.mig.html.TreeSelectionModel$NodeSelectionState = Node selection state
+com.top_logic.mig.html.TreeSelectionModel$NodeSelectionState.tooltip = Description of the selection state of a tree node.
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.ALL = All
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.ALL.tooltip = All descendants of the node are selected.
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.NONE = None
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.NONE.tooltip = None of the descendants of the node are selected.
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.SOME = Some
+com.top_logic.mig.html.TreeSelectionModel.DescendantState.SOME.tooltip = There are descendants of the node that are selected.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.ALL_DESCENDANTS = All descendants
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.ALL_DESCENDANTS.tooltip = The node is not selected, but all of its descendants.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.FULL = Full
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.FULL.tooltip = The node and all of its its descendants are selected.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.NONE = None
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.NONE.tooltip = Neither the node nor any of its descendants is selected.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_NO_DESCENDANTS = Selected no descendants
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_NO_DESCENDANTS.tooltip = The node is selected, but none of its descendants.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_SOME_DESCENDANTS = Selected some descendants
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SELECTED_SOME_DESCENDANTS.tooltip = The node and some of its descendants are selected.
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SOME_DESCENDANTS = Some descendants
+com.top_logic.mig.html.TreeSelectionModel.NodeSelectionState.SOME_DESCENDANTS.tooltip = The node is not selected, but there are selected descendants.
 com.top_logic.mig.html.TreeSelectionModelFactory = Tree selection model factory
 com.top_logic.mig.html.TreeSelectionModelFactory.tooltip = <i>Default selection model factory</i> that unwraps <i>tree nodes</i> before passing the nodes to the configured filter.
 com.top_logic.mig.html.TriState = Tri state
