--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -137,7 +137,7 @@ class.com.top_logic.layout.table.export.I18NConstants.PERFORMING_EXPORT = Export
 class.com.top_logic.layout.table.export.I18NConstants.PREPARING_DOWNLOAD = Download vorbereiten.
 class.com.top_logic.layout.table.export.I18NConstants.STARTING_EXPORT = Export starten.
 class.com.top_logic.layout.table.model.I18NConstants.NO_SUCH_COLUMN__COLUMN = Es gibt keine Spalte mit dem Identifier {0}. Es ist wichtig, dass die inneren Spalten in einer vorherigen Spaltenkonfiguration definiert werden, bevor sie in einer Spaltengruppenkonfiguration verwendet werden.
-class.com.top_logic.layout.table.tree.I18NConstants.DESELECT_SUBTREE = Löscht die Auswahl des Teilbaums
+class.com.top_logic.layout.table.tree.I18NConstants.DESELECT_SUBTREE = Teilbaum abwählen
 class.com.top_logic.layout.table.tree.I18NConstants.DESELECT_SUBTREE.tooltip = Entfernt alle Knoten des Teilbaums aus der aktuellen Auswahl.
 class.com.top_logic.layout.table.tree.I18NConstants.NO_EXEC_FULL = Der ausgewählte Teilbaum ist bereits vollständig ausgewählt.
 class.com.top_logic.layout.table.tree.I18NConstants.NO_EXEC_NONE = Es gibt keine ausgewählten Knoten in dem Teilbaum.
