Ticket #28346: Allow configuration of close dialog command in layout editor.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -3023,8 +3023,6 @@ com.top_logic.layout.form.component.AbstractCreateComponent$CancelHandler = Abbr
 com.top_logic.layout.form.component.AbstractCreateComponent$CancelHandler.tooltip = Bricht den aktuellen Erstellungsvorgang ab. Alle bisher bearbeiteten Werte gehen verloren und ein geöffneter Dialog wird geschlossen.
 com.top_logic.layout.form.component.AbstractCreateComponent$NewModelAction = Neue Modellaktion
 com.top_logic.layout.form.component.AbstractCreateComponent$NewModelAction.tooltip = Aufzählung, die mögliche Aktionen nach der Erstellung beschreibt.
-com.top_logic.layout.form.component.AbstractCreateComponent.Config.cancel-handler = Knopf zum Abbrechen
-com.top_logic.layout.form.component.AbstractCreateComponent.Config.cancel-handler.tooltip = Die <i>ID</i><i>(Command-Handler-Konfiguration</i>) des <i>Befehls</i>, der den Erstellungsvorgang abbricht.
 com.top_logic.layout.form.component.AbstractCreateComponent.Config.create-handler = Knopf zum Erstellen
 com.top_logic.layout.form.component.AbstractCreateComponent.Config.create-handler.tooltip = Die <i>ID</i><i>(command handler configuration</i>) des <i>Befehls</i>, der für die Erstellung des neuen Objekts aus den von dieser Komponente aufgelisteten Informationen verantwortlich ist.
 com.top_logic.layout.form.component.AbstractCreateComponent.Config.newModelAction = Neue Modellaktion
@@ -7833,14 +7831,14 @@ com.top_logic.tool.boundsec.CallCommand.Config.group.tooltip = Die Befehlsgruppe
 com.top_logic.tool.boundsec.CallCommand.Config.id.tooltip = Ein <i>Aufrufbefehl</i> innerhalb einer <i>Befehlssequenz</i> benötigt keine eigene ID. <p> Bei der direkten Registrierung eines <i>Anrufbefehls</i> auf einer Komponente ist weiterhin eine Nicht-0-ID erforderlich. </p>
 com.top_logic.tool.boundsec.CallCommand.tooltip = <i>Befehl</i>, der dynamisch einen anderen Befehl auf derselben oder einer anderen Komponente aufruft und dabei seine eigenen Einstellungen einschließlich der Zugriffskontrolle verwendet.
 com.top_logic.tool.boundsec.ChangeCheckDialogCloser = Dialogfeld "Prüfung ändern" näher
-com.top_logic.tool.boundsec.ChangeCheckDialogCloser.tooltip = Der <i>Klassenwechsel-Prüfdialog closer</i> ist ein <i>Befehlshandler für den modalen Dialog close</i>, der eine schmutzige Behandlung durchführt. Die zu prüfenden <i>Formular-Handler</i> sind die Handler in dem durch diesen Befehl geschlossenen Dialog.
+com.top_logic.tool.boundsec.ChangeCheckDialogCloser.tooltip = Der <i>Klassenwechselprüfungsdialog Closer</i> ist ein <i>Schließdialog</i>, der eine unsaubere Behandlung durchführt. Die zu prüfenden <i>Formular-Handler</i> sind die Handler in dem durch diesen Befehl geschlossenen Dialog.
 com.top_logic.tool.boundsec.CheckerProxyHandler = Checker-Proxy-Handler
 com.top_logic.tool.boundsec.CheckerProxyHandler.Config.command = Befehl
 com.top_logic.tool.boundsec.CheckerProxyHandler.Config.command.tooltip = <i>Befehl</i>, an den die Ausführung delegiert werden soll.
 com.top_logic.tool.boundsec.CheckerProxyHandler.Config.name.tooltip = Name der Komponente, an die Zugriffsprüfungen delegiert werden sollen.
 com.top_logic.tool.boundsec.CheckerProxyHandler.tooltip = <i>Befehlshandler-Proxy</i>, der an einen benutzerdefinierten <i>gebundenen Prüfer</i> für Zugriffsprivilegien delegiert.
-com.top_logic.tool.boundsec.CloseModalDialogCommandHandler = Befehlshandler für den modalen Dialog schließen
-com.top_logic.tool.boundsec.CloseModalDialogCommandHandler.tooltip = Standardbefehl zum Schließen eines Dialogs.
+com.top_logic.tool.boundsec.CloseModalDialogCommandHandler = Dialog schließen
+com.top_logic.tool.boundsec.CloseModalDialogCommandHandler.tooltip = <i>Befehl</i> zum Schließen des aktuell geöffneten Dialogs.
 com.top_logic.tool.boundsec.CockpitLayout = Cockpit-Layout
 com.top_logic.tool.boundsec.CockpitLayout.tooltip = Mit einem CockpitLayout können Sie Portlets erstellen. Ein CockpitLayout kann jede Art von Komponente enthalten. Auf alle enthaltenen Komponenten, die <code>instanceof</code>
 com.top_logic.tool.boundsec.CommandGroupType = Befehlsgruppentyp
