--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -3023,8 +3023,6 @@ com.top_logic.layout.form.component.AbstractCreateComponent$CancelHandler = Canc
 com.top_logic.layout.form.component.AbstractCreateComponent$CancelHandler.tooltip = Cancels the current create operation. All values edited so far are lost and an open dialog is closed.
 com.top_logic.layout.form.component.AbstractCreateComponent$NewModelAction = New model action
 com.top_logic.layout.form.component.AbstractCreateComponent$NewModelAction.tooltip = Enumeration describing possible actions after create.
-com.top_logic.layout.form.component.AbstractCreateComponent.Config.cancel-handler = Cancel handler
-com.top_logic.layout.form.component.AbstractCreateComponent.Config.cancel-handler.tooltip = The <i>ID</i> (<i>command handler configuration</i>) of the <i>command</i> that aborts the create operation.
 com.top_logic.layout.form.component.AbstractCreateComponent.Config.create-handler = Create handler
 com.top_logic.layout.form.component.AbstractCreateComponent.Config.create-handler.tooltip = The <i>ID</i> (<i>command handler configuration</i>) of the <i>command</i> responsible executing the creation of the new object from the information collected by this component.
 com.top_logic.layout.form.component.AbstractCreateComponent.Config.newModelAction = New model action
@@ -7833,14 +7831,14 @@ com.top_logic.tool.boundsec.CallCommand.Config.group.tooltip = The command group
 com.top_logic.tool.boundsec.CallCommand.Config.id.tooltip = A <i>call command</i> within a <i>command sequence</i> does not need its own ID. <p> When directly registering a <i>call command</i> on a component, a non-<code>null</code> ID is still required. </p>
 com.top_logic.tool.boundsec.CallCommand.tooltip = <i>Command</i> that dynamically calls another command on the same or another component using its own settings including access control.
 com.top_logic.tool.boundsec.ChangeCheckDialogCloser = Change check dialog closer
-com.top_logic.tool.boundsec.ChangeCheckDialogCloser.tooltip = The class <i>change check dialog closer</i> is a <i>close modal dialog command handler</i> which performs dirty handling. The <i>form handlers</i> to check are the handlers in the dialog closed by this command.
+com.top_logic.tool.boundsec.ChangeCheckDialogCloser.tooltip = The class <i>change check dialog closer</i> is a <i>close dialog</i> which performs dirty handling. The <i>form handlers</i> to check are the handlers in the dialog closed by this command.
 com.top_logic.tool.boundsec.CheckerProxyHandler = Checker proxy handler
 com.top_logic.tool.boundsec.CheckerProxyHandler.Config.command = Command
 com.top_logic.tool.boundsec.CheckerProxyHandler.Config.command.tooltip = <i>Command</i> to delegate execution to.
 com.top_logic.tool.boundsec.CheckerProxyHandler.Config.name.tooltip = Name of the component to delegate access checks to.
 com.top_logic.tool.boundsec.CheckerProxyHandler.tooltip = <i>Command handler proxy</i> that delegates to a custom <i>bound checker</i> for access privileges.
-com.top_logic.tool.boundsec.CloseModalDialogCommandHandler = Close modal dialog command handler
-com.top_logic.tool.boundsec.CloseModalDialogCommandHandler.tooltip = Default command to close a Dialog.
+com.top_logic.tool.boundsec.CloseModalDialogCommandHandler = Close dialog
+com.top_logic.tool.boundsec.CloseModalDialogCommandHandler.tooltip = <i>Command</i> closing the currently open dialog.
 com.top_logic.tool.boundsec.CockpitLayout = Cockpit layout
 com.top_logic.tool.boundsec.CockpitLayout.tooltip = With a CockpitLayout you can build portlets. A CockpitLayout may contain any kind of component. On all contained components, that are <code>instanceof</code>
 com.top_logic.tool.boundsec.CommandGroupType = Command group type
