Ticket #28727: Allow to specify levels to select.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -6150,6 +6150,8 @@ com.top_logic.layout.table.renderer.UniformCellRenderer.tooltip = A <i>cell rend
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll = Tree table expand collapse all
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll.tooltip = Abstract command that expands or collapses all nodes in a tree table.
 com.top_logic.layout.table.tree.SelectSubtree = Select subtree
+com.top_logic.layout.table.tree.SelectSubtree.Config.levels = Levels
+com.top_logic.layout.table.tree.SelectSubtree.Config.levels.tooltip = The number of tree levels to process. <p> A value of <code>0</code> means "all levels". </p>
 com.top_logic.layout.table.tree.SelectSubtree.Config.select = Select
 com.top_logic.layout.table.tree.SelectSubtree.Config.select.tooltip = Whether the subtree is selected or deselected.
 com.top_logic.layout.table.tree.SelectSubtree.tooltip = <i>Command</i> selecting all nodes in the subtree.
