Ticket #28727: Allow to specify levels to select.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -6149,6 +6149,8 @@ com.top_logic.layout.table.renderer.UniformCellRenderer.tooltip = Eine <i>Zell-R
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll = Baumtabelle erweitern einklappen alle
 com.top_logic.layout.table.tree.AbstractTreeTableExpandCollapseAll.tooltip = Abstrakter Befehl, der alle Knoten in einer Baumtabelle ein- oder ausklappt.
 com.top_logic.layout.table.tree.SelectSubtree = Teilbaum auswählen
+com.top_logic.layout.table.tree.SelectSubtree.Config.levels = Ebenen
+com.top_logic.layout.table.tree.SelectSubtree.Config.levels.tooltip = Die Anzahl der zu verarbeitenden Baumebenen. <p> Ein Wert von <code>0</code> bedeutet "alle Ebenen". </p>
 com.top_logic.layout.table.tree.SelectSubtree.Config.select = Wählen Sie
 com.top_logic.layout.table.tree.SelectSubtree.Config.select.tooltip = Ob der Teilbaum ausgewählt oder abgewählt ist.
 com.top_logic.layout.table.tree.SelectSubtree.tooltip = <i>Befehl</i> zur Auswahl aller Knoten im Teilbaum.
