Ticket #28727: Allow recording subtree selection.

--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -4245,6 +4245,8 @@ com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.INCREMENT
 com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.INCREMENTAL.tooltip = If a new object is selected, it is selected additionally to the already selected objects. It does not replace the old selection.
 com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.LEGACY = Legacy
 com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.LEGACY.tooltip = Only for backwards compatibility with old scripts. <p> This is the default <i>selection change kind</i>, as it is the first enum value. It is used to detect old scripts, where the <i>selection change kind</i> did not exist. </p>
+com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.SUBTREE = Subtree
+com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.SUBTREE.tooltip = If a new object is selected, it is selected together with its whole subtree additionally to the already selected objects. It does not replace the old selection.
 com.top_logic.layout.scripting.action.SelectAction.change-kind = Change kind
 com.top_logic.layout.scripting.action.SelectAction.change-kind.tooltip = What kind of change? incremental or Absolute?
 com.top_logic.layout.scripting.action.SelectAction.selection = Selection
