--- a/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
+++ b/com.top_logic/src/main/webapp/WEB-INF/conf/resources/Messages_de.properties
@@ -2263,7 +2263,7 @@ com.top_logic.layout.scripting.runtime.action.OpenTableFilterOp = Öffne Filter '
 com.top_logic.layout.scripting.runtime.action.OpenTreeFilterOp = Öffne Baum-Konfiguration für {model-name}.
 com.top_logic.layout.scripting.runtime.action.RecordingFailedActionOp = ERROR: Aufzeichnung fehlgeschlagen: {message}
 com.top_logic.layout.scripting.runtime.action.RunTaskActionOp = Warte auf Beendigung von Task '{task-name}'.
-com.top_logic.layout.scripting.runtime.action.SelectActionOp = {selection.selection-state.boolean ? "Selektiere" : "Deselektiere"} {selection.selectee}.
+com.top_logic.layout.scripting.runtime.action.SelectActionOp = {selection.selection-state.boolean ? "Selektiere" : "Deselektiere"} {change-kind} {selection.selectee}.
 com.top_logic.layout.scripting.runtime.action.SelectSelectableActionOp = Selektiere {selection}.
 com.top_logic.layout.scripting.runtime.action.SetGlobalVariableOp = Setze Variable '{name}' auf {value}.
 com.top_logic.layout.scripting.runtime.action.SetTableColumnsOp = Wähle die Spalten {foreach(column : columns, ", ", {'{$column}'})} in Tabelle {model-name} aus.
