Ticket #28727: Allow recording subtree selection.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -4244,6 +4244,8 @@ com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.INCREMENT
 com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.INCREMENTAL.tooltip = Wenn ein neues Objekt ausgewählt wird, wird es zusätzlich zu den bereits ausgewählten Objekten ausgewählt. Es ersetzt nicht die alte Markierung.
 com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.LEGACY = Vermächtnis
 com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.LEGACY.tooltip = Nur aus Gründen der Abwärtskompatibilität mit alten Skripten. <p> Dies ist die standardmäßige <i>Art der Auswahländerung</i>, da es sich um den ersten Aufzählungswert handelt. Sie wird verwendet, um alte Skripte zu erkennen, bei denen die <i>Art der Auswahländerung</i> nicht existierte. </p>
+com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.SUBTREE = Teilbaum
+com.top_logic.layout.scripting.action.SelectAction.SelectionChangeKind.SUBTREE.tooltip = Wenn ein neues Objekt ausgewählt wird, wird es zusammen mit seinem gesamten Teilbaum zusätzlich zu den bereits ausgewählten Objekten ausgewählt. Es ersetzt nicht die alte Auswahl.
 com.top_logic.layout.scripting.action.SelectAction.change-kind = Art der Änderung
 com.top_logic.layout.scripting.action.SelectAction.change-kind.tooltip = Welche Art von Veränderung? inkrementell oder absolut?
 com.top_logic.layout.scripting.action.SelectAction.selection = Auswahl
