Ticket #25918: Implemented drop on diagram elements.

--- a/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.graphic.blocks.server/src/main/java/META-INF/messages_en.properties
@@ -31,4 +31,8 @@ com.top_logic.graphic.flow.server.ui.ScriptFlowChartBuilder.tooltip = <i>Flow ch
 com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler = Scripted click handler
 com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.Config.script = Script
 com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.Config.script.tooltip = Function that retrieves the <i>click target</i> diagram element. <p> The function's result is passed to configured UI actions. </p> <p> If no script is provided, the user object of the clicked diagram element is used as input for further UI actions. </p>
-com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.tooltip = <i>Click handler</i> that can be implemented by TL-Script.
+com.top_logic.graphic.flow.server.ui.handler.ScriptedClickHandler.tooltip = <i>Click handler</i> that can be implemented in TL-Script.
+com.top_logic.graphic.flow.server.ui.handler.ScriptedDropHandler = Scripted drop handler
+com.top_logic.graphic.flow.server.ui.handler.ScriptedDropHandler.Config.script = Script
+com.top_logic.graphic.flow.server.ui.handler.ScriptedDropHandler.Config.script.tooltip = Function that retrieves the <i>drop region</i> diagram element, the dragged objects and the model of the drag source from which the drag operation was initiated. <pre> <code>node -> dragged -> source -> ...</code> </pre> <p> The function's result is passed to configured UI actions. </p> <p> If no script is provided, a list with the user object of the clicked diagram element as first element and the list of dragged objects as second element is used as input for further UI actions. </p>
+com.top_logic.graphic.flow.server.ui.handler.ScriptedDropHandler.tooltip = <i>Server drop handler</i> that can be implemented in TL-Script.
